# arcesetc

./: .rtd-environment.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  contributing.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
arcesetc/: __init__.py  plots.py  util.py  utils.py
arcesetc/data/: BD28_4211.0026.wfrmcpc.fits  HIP107864.0003.wfrmcpc.fits  HR3454.0016.wfrmcpc.fits  HR5191.0002.wfrmcpc.fits  archive.hdf5  sptype_dict.json  sptype_to_temp.json
arcesetc/tests/: test_utils.py
arcesetc/tests/legacy_specutils/: __init__.py  indexer.py  readspec.py  spectrum1d.py  specwcs.py
docs/: conf.py  index.rst  paper.bib  paper.md
docs/arcesetc/: gettingstarted.rst  index.rst  installation.rst  nextsteps.rst
licenses/: APACHE2.rst  BSD2.rst  BSD3.rst  GPLv3.rst  MIT.rst
notebooks/: create_archive.ipynb  etc.ipynb  example.ipynb  hr.ipynb  target_paths.txt
